src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>LLC_BI__Treasury Management Lead</fullName>
        <isActive>true</isActive>
    </businessProcesses>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The field is required and specifies the Relationship/Account associated with the Lead. It is utilized in the Convert to Product Package operation.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field references the financial institution&apos;s Lead associated branch location. It is optional and manually populated.</description>
        <label>Branch</label>
        <referenceTo>LLC_BI__Branch__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CurrentGenerators__c</fullName>
        <description>This field is currently not being used.</description>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Email_Opt_In__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field specifies if the Lead&apos;s contact is opted in for email communication. It is optional and manually populated.</description>
        <label>Email Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest__c</fullName>
        <description>This picklist field is an example of a custom multi-select picklist.</description>
        <inlineHelpText>This is an example of a custom multi-select picklist where you can select multiple options.</inlineHelpText>
        <label>Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product 1</fullName>
                </value>
                <value>
                    <fullName>Product 2</fullName>
                </value>
                <value>
                    <fullName>Product 3</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Lead_Detail__c</fullName>
        <description>This field is optional. It is manually populated. This field allows users to enter additional details about a lead.</description>
        <label>Lead Detail</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Lead_Priority__c</fullName>
        <description>This field specifies the priority of the financial institution&apos;s Lead. It is optional and manually populated.</description>
        <label>Lead Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Cold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Lead_Specifics__c</fullName>
        <description>This field is optional. It is manually populated. It is typically used as a dependent picklist on the Lead Source field to provide additional details.</description>
        <label>Lead Specifics</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LeadSource</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Lead_Status_Detail__c</fullName>
        <description>This field is optional. It is manually populated. This field allows users to enter additional details about the current status of a lead.</description>
        <label>Lead Status Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Amount__c</fullName>
        <description>This field shows the amount of the opportunity and whether it is a loan, deposit, etc. It is optional and manually populated.</description>
        <inlineHelpText>The amount of the opportunity, whether it&apos;s a loan, deposit, etc.</inlineHelpText>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Type__c</fullName>
        <description>This picklist specifies the Lead&apos;s loan type. It is optional and manually populated</description>
        <label>Loan Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>Expansion</fullName>
                </value>
                <value>
                    <fullName>Refinance</fullName>
                </value>
                <value>
                    <fullName>Relocation</fullName>
                </value>
                <value>
                    <fullName>Start-up</fullName>
                </value>
                <value>
                    <fullName>Startup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is auto-populated as a look up to a loan created when Convert to nCino is selected on the lead. This allows the financial institution and the BI tool to track converted leads</description>
        <label>Converted Lead</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Converted Lead</relationshipLabel>
        <relationshipName>ConvertedLead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Mobile_Phone__c</fullName>
        <description>This field captures the phone number of the lead&apos;s associated contact. It is optional and manually populated.</description>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LLC_BI__NumberofLocations__c</fullName>
        <description>This field tracks how many business locations the lead&apos;s associated customer may have. It is optional and manually populated.</description>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Primary__c</fullName>
        <description>This field is currently not being used.</description>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__ProductInterest__c</fullName>
        <description>This field is currently not being used.</description>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Line_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This reference field looks up the Product Line of the Lead&apos;s specific product. It is a required field, as the Product Line drives the product type options. It is manually populated.</description>
        <label>Product Line</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>LLC_BI__Product_Line__c.LLC_BI__Non_Global_Product_Type_Count__c</field>
                <operation>greaterThan</operation>
                <value>0</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LLC_BI__Product_Line__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Line__c</fullName>
        <description>The required picklist field is manually populated and specifies the Product Line. The options available for the Product Type and Product selections are dependent on this field.</description>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial Product Line</fullName>
                </value>
                <value>
                    <fullName>Retail Product Line</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The field is a system generated field and specifies the Product Package the lead was converted to. The field is populated after the Convert to Product Package process is executed. The field is visible to users</description>
        <label>Product Package</label>
        <referenceTo>LLC_BI__Product_Package__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The field is required and is used to look up the Lead’s specific Product. The options available for the Product selections are dependent on the Product Line and Product Type fields. It is required and manually populated.</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.LLC_BI__Product_Type_Reference__c</field>
                <operation>equals</operation>
                <valueField>LLC_BI__Product__c.LLC_BI__Product_Type__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.LLC_BI__Product_Line_Reference__c</field>
                <operation>equals</operation>
                <valueField>LLC_BI__Product__c.LLC_BI__Product_Type__r.LLC_BI__Product_Line__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LLC_BI__Product__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Type_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The field is required and is used to look up the Lead’s specific Product Type. The options available for the Product Type are dependent on the Product Line and Product Line fields. It is required and manually populated.</description>
        <label>Product Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.LLC_BI__Product_Line_Reference__c</field>
                <operation>equals</operation>
                <valueField>LLC_BI__Product_Type__c.LLC_BI__Product_Line__c</valueField>
            </filterItems>
            <filterItems>
                <field>LLC_BI__Product_Type__c.LLC_BI__Usage_Type__c</field>
                <operation>notContain</operation>
                <value>Global</value>
            </filterItems>
            <filterItems>
                <field>LLC_BI__Product_Type__c.LLC_BI__Product_Count__c</field>
                <operation>greaterThan</operation>
                <value>0</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LLC_BI__Product_Type__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Type__c</fullName>
        <description>The required picklist field is manually populated and specifies the Product Type. The options for this field are dependent on the Product Line field. The options available for the Product selections are dependent on this field.</description>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LLC_BI__Product_Line__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial Product Type</fullName>
                </value>
                <value>
                    <fullName>Retail Line of Credit</fullName>
                </value>
                <value>
                    <fullName>Retail Auto Loan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Product__c</fullName>
        <description>The required picklist field is manually populated and specifies the Product. The options for this field are dependent on the Product Line and Product Type field.</description>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LLC_BI__Product_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial Product</fullName>
                </value>
                <value>
                    <fullName>Retail High Interest Credit Card</fullName>
                </value>
                <value>
                    <fullName>Retail New Auto Loan</fullName>
                </value>
                <value>
                    <fullName>Retail Used Auto Loan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Referred_To__c</fullName>
        <description>This picklist specifies whether the lead was referred to another financial institution, another branch or maybe another department. It can be controlled by the financial institution. It is optional and manually populated.</description>
        <label>Referred To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BofA</fullName>
                </value>
                <value>
                    <fullName>PPC</fullName>
                </value>
                <value>
                    <fullName>Wells Fargo</fullName>
                </value>
                <value>
                    <fullName>US Bank</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Revenue__c</fullName>
        <description>This field is optional and specifies the Lead&apos;s potential revenue amount. It is manually populated.</description>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__SICCode__c</fullName>
        <description>This field is optional and specifies the Standard Industrial Classification (SIC) code for the Lead’s associated industry. SIC is a system for classifying industries by a four-digit code. The field is manually populated.</description>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__AllOpenLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__Leads_this_Month</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LLC_BI__Lead_Specifics__c</columns>
        <columns>LEAD.INDUSTRY</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Mktg: Uncoverted Leads this Month</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__My_Leads</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LLC_BI__Lead_Specifics__c</columns>
        <columns>LEAD.INDUSTRY</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open,Long Term</value>
        </filters>
        <label>My Leads</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__Pharmacy_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LLC_BI__Lead_Specifics__c</columns>
        <columns>LLC_BI__Lead_Detail__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.INDUSTRY</field>
            <operation>equals</operation>
            <value>Pharmacy</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open,Long Term</value>
        </filters>
        <label>Pharmacy Leads</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__Recent_Leads_All</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.INDUSTRY</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LLC_BI__Lead_Specifics__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:10</value>
        </filters>
        <label>Recent Leads - All</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__ViewCustom1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 1</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__ViewCustom2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 2</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__Website_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.INDUSTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Underwood</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Website Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <recordTypes>
        <fullName>LLC_BI__Loan</fullName>
        <active>true</active>
        <businessProcess>LLC_BI__Treasury Management Lead</businessProcess>
        <description>Select for a New Loan Opportunity</description>
        <label>Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Treasury_Management</fullName>
        <active>true</active>
        <businessProcess>LLC_BI__Treasury Management Lead</businessProcess>
        <description>Select for a New Treasury Management Opportunity</description>
        <label>Treasury Management</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>